deployment-aurora/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: acueducto-svc
  namespace: acueducto-aurora
spec:
  type: NodePort
  selector:
      app: acueducto
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
