deployment-aurora/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: acueducto-ingress
  namespace: acueducto-aurora
spec:
  rules:
  - host: aurora.agapanto.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acueducto-svc
            port:
              number: 8080
  tls:
  - hosts:
    - aurora.agapanto.com.co
    secretName: aurora-acueducto-com-co
